Приветствую! Не знал, что мне сменили ревьювера, приятно познакомиться! Напишу в двух словах о себе: Меня зовут Александр, мне 34 года и я всю жизнь проработал инженером-конструктором. Этот курс - мой первый опыт в программировании(не считая Scratch и самых основ C). Для меня всё в новинку, но я очень хочу стать хорошим разработчиком, потому стараюсь изо всех сил. Я всегда буду рад узнать что-то новое, познакомиться с новыми инструментами и применением уже известных. Буду благодарен за любые советы, подсказки. Готов работать над ошибками и улучшением кода. Обращаться можно на «Ты», но это уже как удобнее.
Организационный вопрос - куда писать вопросы - комментариями в код, коммитами в гит или отдельным файлом?
Нужно ли мне писать больше комментариев вообще?

По самой работе: Прошу прощения за класс Tester, случайно не снял галочку отправки на GitHub.
Остальные замечания я исправил и постарался учесть все рекомендации. Поменял реализацию коллекций где нашел, вроде бы не сломалось ничего.
Для history поменял ArrayList на LinkedList, а реализацию на List. В самом методе привет к LinkedList, чтобы воспользоваться removeFirst. Если сделал не совсем верно - готов исправить.
Касательно getOrDefault - мне такой метод подсказала IDE, метод понравился, но правильно реализовать его я не смог, так как не придумал, что вернуть(с учетом типа возвращаемого методом значения и неполного ТЗ) и поменял на просто get, который возвращал объект или null.

Надеюсь не слишком много букв получилось.