@@ -2,14 +2,14 @@ package ru.yandex.practicum.taskTracker.manager;
 
 import ru.yandex.practicum.taskTracker.tasks.Task;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
 
     private static final int MAX_HISTORY_SIZE = 10;
 
-    private List<Task> history = new ArrayList<>();
+    private List<Task> history = new LinkedList<>();
 
     @Override
     public void add(Task task) {
@@ -19,13 +19,13 @@ public class InMemoryHistoryManager implements HistoryManager {
 
     @Override
     public List<Task> getHistory() {
-        System.out.println(history.toString());
         return history;
     }
 
     private void checkHistorySize() {
+        LinkedList<Task> history = (LinkedList<Task>) getHistory(); //сделал тип ссылки LinkedList, чтобы воспользоваться removeFirst
         if (history.size() > MAX_HISTORY_SIZE) {
-            history.remove(0);
+            history.removeFirst();
         }
     }
 
